logs/tracking/build.make.312.log.stderr
In file included from /usr/include/eigen3/Eigen/Core:254:0,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/ImageProcessing.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/eigen3/Eigen/src/Core/VectorwiseOp.h: In instantiation of ‘Eigen::CwiseBinaryOp<Eigen::internal::scalar_quotient_op<typename ExpressionType::Scalar>, const typename Eigen::internal::remove_all<typename Eigen::internal::conditional<Eigen::internal::must_nest_by_value<ExpressionType>::ret, ExpressionType, ExpressionType&>::type>::type, const typename Eigen::VectorwiseOp<ExpressionType, Direction>::ExtendedType<OtherDerived>::Type> Eigen::VectorwiseOp<ExpressionType, Direction>::operator/(const Eigen::DenseBase<OtherDerived>&) const [with OtherDerived = Eigen::Block<Eigen::Matrix<float, 4, -1>, 1, -1, false>; ExpressionType = Eigen::Matrix<float, 4, -1>; int Direction = 1; typename Eigen::VectorwiseOp<ExpressionType, Direction>::ExtendedType<OtherDerived>::Type = Eigen::Replicate<Eigen::Block<Eigen::Matrix<float, 4, -1>, 1, -1, false>, 4, 1>; typename Eigen::internal::remove_all<typename Eigen::internal::conditional<Eigen::internal::must_nest_by_value<ExpressionType>::ret, ExpressionType, ExpressionType&>::type>::type = Eigen::Matrix<float, 4, -1>; typename ExpressionType::Scalar = float]’:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:25:59:   required from here
/usr/include/eigen3/Eigen/src/Core/util/StaticAssert.h:32:40: error: static assertion failed: THIS_METHOD_IS_ONLY_FOR_ARRAYS_NOT_MATRICES
     #define EIGEN_STATIC_ASSERT(X,MSG) static_assert(X,#MSG);
                                        ^
/usr/include/eigen3/Eigen/src/Core/util/StaticAssert.h:196:7: note: in expansion of macro ‘EIGEN_STATIC_ASSERT’
       EIGEN_STATIC_ASSERT((internal::is_same<typename internal::traits<Derived>::XprKind, ArrayXpr>::value), \
       ^
/usr/include/eigen3/Eigen/src/Core/VectorwiseOp.h:529:7: note: in expansion of macro ‘EIGEN_STATIC_ASSERT_ARRAYXPR’
       EIGEN_STATIC_ASSERT_ARRAYXPR(ExpressionType)
       ^
In file included from /usr/include/eigen3/Eigen/Core:346:0,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/ImageProcessing.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/eigen3/Eigen/src/Core/VectorwiseOp.h:531:23: error: no match for ‘operator/’ (operand types are ‘Eigen::Matrix<float, 4, -1>’ and ‘Eigen::VectorwiseOp<Eigen::Matrix<float, 4, -1>, 1>::ExtendedType<Eigen::Block<Eigen::Matrix<float, 4, -1>, 1, -1, false> >::Type {aka Eigen::Replicate<Eigen::Block<Eigen::Matrix<float, 4, -1>, 1, -1, false>, 4, 1>}’)
       return m_matrix / extendedTo(other.derived());
                       ^
/usr/include/eigen3/Eigen/src/Core/VectorwiseOp.h:531:23: note: candidates are:
In file included from /usr/include/eigen3/Eigen/src/Core/MatrixBase.h:136:0,
                 from /usr/include/eigen3/Eigen/Core:279,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/ImageProcessing.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/eigen3/Eigen/src/Core/../plugins/CommonCwiseUnaryOps.h:61:1: note: const Eigen::CwiseUnaryOp<Eigen::internal::scalar_quotient1_op<typename Eigen::internal::traits<T>::Scalar>, const Derived> Eigen::MatrixBase<Derived>::operator/(const Scalar&) const [with Derived = Eigen::Matrix<float, 4, -1>; typename Eigen::internal::traits<T>::Scalar = float; Eigen::MatrixBase<Derived>::Scalar = float]
 operator/(const Scalar& scalar) const
 ^
/usr/include/eigen3/Eigen/src/Core/../plugins/CommonCwiseUnaryOps.h:61:1: note:   no known conversion for argument 1 from ‘Eigen::VectorwiseOp<Eigen::Matrix<float, 4, -1>, 1>::ExtendedType<Eigen::Block<Eigen::Matrix<float, 4, -1>, 1, -1, false> >::Type {aka Eigen::Replicate<Eigen::Block<Eigen::Matrix<float, 4, -1>, 1, -1, false>, 4, 1>}’ to ‘const Scalar& {aka const float&}’
In file included from /usr/include/eigen3/Eigen/Core:368:0,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/ImageProcessing.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/eigen3/Eigen/src/Core/GlobalFunctions.h:74:5: note: template<class Derived> const Eigen::CwiseUnaryOp<Eigen::internal::scalar_inverse_mult_op<typename Derived::Scalar>, const Derived> Eigen::operator/(const typename Derived::Scalar&, const Eigen::ArrayBase<Derived>&)
     operator/(const typename Derived::Scalar& s, const Eigen::ArrayBase<Derived>& a)
     ^
/usr/include/eigen3/Eigen/src/Core/GlobalFunctions.h:74:5: note:   template argument deduction/substitution failed:
In file included from /usr/include/eigen3/Eigen/Core:346:0,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/ImageProcessing.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/eigen3/Eigen/src/Core/VectorwiseOp.h:531:23: note:   ‘Eigen::VectorwiseOp<Eigen::Matrix<float, 4, -1>, 1>::ExtendedType<Eigen::Block<Eigen::Matrix<float, 4, -1>, 1, -1, false> >::Type {aka Eigen::Replicate<Eigen::Block<Eigen::Matrix<float, 4, -1>, 1, -1, false>, 4, 1>}’ is not derived from ‘const Eigen::ArrayBase<Derived>’
       return m_matrix / extendedTo(other.derived());
                       ^
/usr/include/eigen3/Eigen/src/Core/VectorwiseOp.h: In member function ‘Eigen::CwiseBinaryOp<Eigen::internal::scalar_quotient_op<typename ExpressionType::Scalar>, const typename Eigen::internal::remove_all<typename Eigen::internal::conditional<Eigen::internal::must_nest_by_value<ExpressionType>::ret, ExpressionType, ExpressionType&>::type>::type, const typename Eigen::VectorwiseOp<ExpressionType, Direction>::ExtendedType<OtherDerived>::Type> Eigen::VectorwiseOp<ExpressionType, Direction>::operator/(const Eigen::DenseBase<OtherDerived>&) const [with OtherDerived = Eigen::Block<Eigen::Matrix<float, 4, -1>, 1, -1, false>; ExpressionType = Eigen::Matrix<float, 4, -1>; int Direction = 1; typename Eigen::VectorwiseOp<ExpressionType, Direction>::ExtendedType<OtherDerived>::Type = Eigen::Replicate<Eigen::Block<Eigen::Matrix<float, 4, -1>, 1, -1, false>, 4, 1>; typename Eigen::internal::remove_all<typename Eigen::internal::conditional<Eigen::internal::must_nest_by_value<ExpressionType>::ret, ExpressionType, ExpressionType&>::type>::type = Eigen::Matrix<float, 4, -1>; typename ExpressionType::Scalar = float]’:
/usr/include/eigen3/Eigen/src/Core/VectorwiseOp.h:532:5: warning: control reaches end of non-void function [-Wreturn-type]
     }
     ^
make[2]: *** [CMakeFiles/tracking.dir/src/DepthFilter.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
